# djangoprac

./: .python-version  pyproject.toml  temp.py  test.sh
.github/workflows/: ci.yml
config/: settings.py
tabom/: models.py
tabom/migrations/: 0001_initial.py  0002_like_unique_user_article.py
tabom/services/: like_service.py
tabom/tests/: test_auto_now.py  test_like_service.py
