[tool.poetry]
name = "djangoprac"
version = "0.1.0"
description = ""
authors = ["jiwon hwang <realjiwon98@naver.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.5"
django-extensions = "^3.2.3"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
